--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=h3, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<% layout("/layouts/boilerplate")%>
 <body>
      <h3>All Listings</h3>
     <form method="GET" action="/listings/new"><button type="submit">Create new Listing</button></form>
@@ -13,4 +7,4 @@
     <li><a href="/listings/<%=listing._id%>"><%= listing.title %></a></li>
 <%}%>
 </body>
-</html>
+
