--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>create new listing</title>
-</head>
+<% layout("/layouts/boilerplate")%>
 <body>
     <h1>Create new listing</h1>    <br>    <br>    <br>
     <form action="/listings " method="POST">
@@ -27,4 +21,3 @@
     <br>    <br>    <br>
 <button type="submit">SUBMIT</button></form>
 </body>
-</html>
