--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,10 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>StayNest</title>
-</head>
+<% layout("/layouts/boilerplate")%>
 <body>
     <h3>Listing details:</h3>
     <ul><li><%= listing.title %></li>
@@ -17,4 +11,3 @@
 <br><br>
 <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE"><button>Delete this listing</button></form>
 </body>
-</html>
