--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,35 @@
-body{
-    background-color: aquamarine;
+.navbar{
+    height: 5rem;
+    background-color: white;
+}
+.fa-compass-drafting{
+    color:#fe424d;
+}
+.nav-link{
+    color:#222222;
+}
+.f-info-links a {
+text-decoration: none;
+color:#222222;
+
+}
+.f-info-links{
+    width:100%;
+ 
+}
+.f-info-links a:hover{
+    text-decoration: underline;
+}
+.f-info{
+    text-align: center;
+    height:8rems;
+    background-color: grey;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: space-evenly;
+
+}
+.f-info-socials{
+    width:100%;
 }
