--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,10 +1,13 @@
 <% layout("/layouts/boilerplate")%>
 <body>
      <h3>All Listings</h3>
-    <form method="GET" action="/listings/new"><button type="submit">Create new Listing</button></form>
+    <form method="GET" action="/listings/new">
+        <!-- <button type="submit">Create new Listing</button> -->
+    </form>
    
 <%for(let listing of allListings){%>
     <li><a href="/listings/<%=listing._id%>"><%= listing.title %></a></li>
-<%}%>
+
+    <%}%>
 </body>
 
