--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,3 +33,12 @@ color:#222222;
 .f-info-socials{
     width:100%;
 }
+body{
+    font-family: "plus Jakarta Sans",sans-serif !important;
+    display:flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+.container{
+    flex:1;
+}
