--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -2,22 +2,23 @@
 <body>
     <h1>Edit listing</h1>    <br>    <br>    <br>
     <form action="/listings/<%= listing._id%>?_method=PUT " method="POST">
-    <label for="title">Title:</label>
-        <input type="text" value="<%= listing.title%>" id="title" name="listing[title]">
-    <br>    <br>    <br>
-    <label for="description">description</label>
-       <textarea name="listing[description]" id="descrtiption" ><%= listing.description%></textarea>
-    <br>    <br>    <br>
-<label for="price">Price:</label>
-        <input type="text" value="<%= listing.price%>" id="price" name="listing[price]" type="number">
-  <br>    <br>    <br>
-      <label for="image">Image</label>
-        <input type="text" value="<%= listing.image%>" id="image" name="listing[image]"><br><br>
-    <label for="location">location</label>
-        <input type="text" value="<%= listing.location%>" id="location" name="listing[location]">
-    <br>    <br>    <br>
-     <label for="country">country</label>
-        <input type="text" value="<%= listing.country%>" id="country" name="listing[country]">
-    <br>    <br>    <br>
-<button type="submit">Edit</button></form>
+        <div class="mb-3">    <label for="title" class="form-label">Title:</label>
+        <input type="text"  class="form-control"  value="<%= listing.title%>" id="title" name="listing[title]"></div>
+<div class="mb-3"> <label  class="form-label" for="description">description</label>
+       <textarea name="listing[description]" class="form-control"  id="descrtiption" ><%= listing.description%></textarea></div>
+    
+   <div class="mb-3"><label  class="form-label" for="price">Price:</label>
+        <input type="text"   class="form-control" value="<%= listing.price%>" id="price" name="listing[price]" type="number"></div>
+    
+<div class="mb-3"><label for="image" class="form-label">Image</label>
+        <input type="text" class="form-control"  value="<%= listing.image%>" id="image" name="listing[image]"></div>
+
+  <div class="mb-3"> <label class="form-label" for="location">location</label>
+        <input type="text" class="form-control value="<%= listing.location%>" id="location" name="listing[location]"></div>
+   
+    <div class="mb-3"> <label class="form-label"  for="country">country</label>
+        <input type="text" class="form-control"   value="<%= listing.country%>" id="country" name="listing[country]"></div>
+    
+ 
+<button class="btn btn-danger" type="submit">Edit</button></form>
 </body>
