--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,13 +1,20 @@
 <% layout("/layouts/boilerplate")%>
 <body>
      <h3>All Listings</h3>
-    <form method="GET" action="/listings/new">
+    <!-- <form method="GET" action="/listings/new">
         <!-- <button type="submit">Create new Listing</button> -->
-    </form>
-   
+    </form> -->
+    <%for(let listing of allListings){%>
+    <div class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+  </div>
+</div><%}%>
+   <ul>
 <%for(let listing of allListings){%>
     <li><a href="/listings/<%=listing._id%>"><%= listing.title %></a></li>
 
-    <%}%>
+    <%}%></ul>
 </body>
 
