landing page styling implemented

--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,20 +1,22 @@
 <% layout("/layouts/boilerplate")%>
 <body>
      <h3>All Listings</h3>
-    <!-- <form method="GET" action="/listings/new">
-        <!-- <button type="submit">Create new Listing</button> -->
-    </form> -->
-    <%for(let listing of allListings){%>
-    <div class="card" style="width: 18rem;">
-  <img src="..." class="card-img-top" alt="...">
+ <div class="row row-cols-lg-3 row-cols-md-2  row-cols-sm-1">  <%for(let listing of allListings){%>
+  <a href="/listings/<%=listing._id%>" class="listing">
+        <div class="card col" >
+<img src="<%= listing.image.url %>" alt="<%= listing.title %>" class="card-img-top" style="height:20rem;" />
+<div class="card-img-overlay"></div>
   <div class="card-body">
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+    <p class="card-text"><b><%=listing.title%></b></p>
+       <p class="card-text">&#8377;<%= listing.price.toLocaleString("en-IN") %></p>
   </div>
-</div><%}%>
-   <ul>
+</div>
+</a><%}%></div>
+  
+   <!-- <ul>
 <%for(let listing of allListings){%>
     <li><a href="/listings/<%=listing._id%>"><%= listing.title %></a></li>
 
-    <%}%></ul>
+    <%}%></ul> -->
 </body>
 
