--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,3 +42,32 @@ body{
 .container{
     flex:1;
 }
+/* /cards/ */
+.card{
+    border:none !important;
+    margin-bottom: 2rem;
+
+
+}
+.card-img-top{
+   border-radius: 1 rem !important; 
+   width:100% !important;
+   object-fit: cover !important;
+}
+.card-body{
+    padding: 0 !important;
+}
+.card-text{
+    font-weight: 400;
+
+}
+.listing {
+    text-decoration: none;
+}
+.card-img-overlay{
+    opacity:0;
+}
+.card-img-overlay:hover{
+    opacity: 0.2;
+    background-color: white;
+}
