--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,3 +71,11 @@ body{
     opacity: 0.2;
     background-color: white;
 }
+/* show page */
+.show-img{
+    height:30vh;
+}
+.btns{
+    display:flex;
+    justify-content: space-between;
+}
