--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,15 +1,33 @@
 <% layout("/layouts/boilerplate")%>
 <body>
-    <h3>Listing details:</h3>
-    <ul><li><%= listing.title %></li>
-    <li><%= listing.description %></li>
-<li>&#8377;<%= listing.price.toLocaleString("en-IN") %></li>
-<li><%= listing.location %></li>
+    <div class="row"><div class="col-8 offset-2 mt-3">
+        <h3>Listing details:</h3>
+       </div>
+        <div class="card col-6 offset-2">
+   
+  <img src="<%= listing.image.url%>" class="card-img-top show-img" alt="listing_image">
+  <div class="card-body">
+    <p class="card-text"><%= listing.title %><br>
+        <%= listing.description %><br>
+     &#8377,<%= listing.price.toLocaleString("en-IN") %><br>
+     <%= listing.location %><br>
+     <%= listing.country %><br>
+    </p>
+  </div>
+</div>
 
 
-<li><%= listing.country %></li></ul>
 
-<a href="/listings/<%=listing._id%>/edit">Edit this Listing</a>
+
+
 <br><br>
-<form method="POST" action="/listings/<%=listing._id%>?_method=DELETE"><button>Delete this listing</button></form>
+
+    </div>
+   
+<div class="btns">
+<a class="btn btn-dark" href="/listings/<%= listing._id %>/edit">Edit</a>
+<form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
+    <button class="btn btn-dark ">Delete </button>
+</form>
+</div>
 </body>
