client side validation added

--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,24 +1,26 @@
 <% layout("/layouts/boilerplate")%>
 <body>
     <h1>Edit listing</h1>    <br>    <br>    <br>
-    <form action="/listings/<%= listing._id%>?_method=PUT " method="POST">
+    <form action="/listings/<%= listing._id%>?_method=PUT " method="POST" novalidate class="needs-validation">
         <div class="mb-3">    <label for="title" class="form-label">Title:</label>
-        <input type="text"  class="form-control"  value="<%= listing.title%>" id="title" name="listing[title]"></div>
+        <input type="text"  class="form-control"  value="<%= listing.title%>" id="title" name="listing[title]" required ><div class="valid-feedback"> Title looks good!</div></div>
 <div class="mb-3"> <label  class="form-label" for="description">description</label>
-       <textarea name="listing[description]" class="form-control"  id="descrtiption" ><%= listing.description%></textarea></div>
+       <textarea name="listing[description]" class="form-control"  id="descrtiption" required><%= listing.description%></textarea><div class="valid-feedback">description looks good!</div></div>
     
    <div class="mb-3"><label  class="form-label" for="price">Price:</label>
-        <input type="text"   class="form-control" value="<%= listing.price%>" id="price" name="listing[price]" type="number"></div>
+        <input type="text"   class="form-control" value="<%= listing.price%>" id="price" name="listing[price]" type="number" required><div class="invalid-feedback"> please enter a valid price</div></div>
     
 <div class="mb-3"><label for="image" class="form-label">Image</label>
-        <input type="text" class="form-control"  value="<%= listing.image%>" id="image" name="listing[image]"></div>
+        <input type="text" class="form-control"  value="<%= listing.image%>" id="image" name="listing[image]" required><div class="valid-feedback">Image looks good!</div></div>
 
   <div class="mb-3"> <label class="form-label" for="location">location</label>
-        <input type="text" class="form-control value="<%= listing.location%>" id="location" name="listing[location]"></div>
+        <input type="text" class="form-control value="<%= listing.location%>" id="location" name="listing[location]" required><div class="valid-feedback"> location perfect!</div></div>
    
     <div class="mb-3"> <label class="form-label"  for="country">country</label>
-        <input type="text" class="form-control"   value="<%= listing.country%>" id="country" name="listing[country]"></div>
+        <input type="text" class="form-control"   value="<%= listing.country%>" id="country" name="listing[country]" required><div class="valid-feedback"> Awesome!</div></div>
     
  
 <button class="btn btn-danger" type="submit">Edit</button></form>
+  <script src="/js/script.js"></script>
+
 </body>
