express error feature implemented

--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boilerplate")%>
+<% layout("layouts/boilerplate")%>
 <body>
     <h1>Create new listing</h1>    <br>    <br>    <br>
     <form action="/listings " method="POST" novalidate class="needs-validation">
