--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -1,7 +1,7 @@
-<% layout("/layouts/boilerplate")%>
+<% layout("layouts/boilerplate")%>
 <body>
     <h1>Edit listing</h1>    <br>    <br>    <br>
-    <form action="/listings/<%= listing._id%>?_method=PUT " method="POST" novalidate class="needs-validation">
+    <form action="/listings/<%= listing._id%>?_method=PUT" method="POST" novalidate class="needs-validation">
         <div class="mb-3">    <label for="title" class="form-label">Title:</label>
         <input type="text"  class="form-control"  value="<%= listing.title%>" id="title" name="listing[title]" required ><div class="valid-feedback"> Title looks good!</div></div>
 <div class="mb-3"> <label  class="form-label" for="description">description</label>
