--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,4 +1,4 @@
-<% layout("/layouts/boilerplate")%>
+<% layout("layouts/boilerplate")%>
 <body>
      <h3>All Listings</h3>
  <div class="row row-cols-lg-3 row-cols-md-2  row-cols-sm-1">  <%for(let listing of allListings){%>
@@ -13,10 +13,7 @@
 </div>
 </a><%}%></div>
   
-   <!-- <ul>
-<%for(let listing of allListings){%>
-    <li><a href="/listings/<%=listing._id%>"><%= listing.title %></a></li>
+ 
 
-    <%}%></ul> -->
 </body>
 
