--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,13 +1,13 @@
 <% layout("layouts/boilerplate")%>
 <body>
     <div class="row"><div class="col-8 offset-2 mt-3">
-        <h3>Listing details:</h3>
+        <h3><%= listing.title%></h3>
        </div>
         <div class="card col-6 offset-2">
    
   <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="listing_image">
   <div class="card-body">
-    <p class="card-text"><%= listing.title %><br>
+    <p class="card-text">
         <%= listing.description %><br>
      &#8377,<%= listing.price.toLocaleString("en-IN") %><br>
      <%= listing.location %><br>
@@ -29,5 +29,22 @@
 <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
     <button class="btn btn-dark ">Delete </button>
 </form>
+</div>
+
+<div class="col-8 offset-3 mb-3">
+    <hr>
+<h4>Leave a review</h4>
+<form class="form-label">
+<div class="mb-3 mt-3">
+    <label for="rating" class="form-label">Rating</label>
+    <input type="range" min="1" max="5" id="review[rating]"   >
+</div>
+<div class="mb-3 mt-3">
+    <label for="comment" class="form-label">Comments</label>
+    <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-label"></textarea>
+</div>
+<button class="btn btn-outline-dark">Submit</button>
+</form>
+
 </div>
 </body>
