--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -32,9 +32,9 @@
 </div>
 
 <div class="col-8 offset-3 mb-3">
-    <hr>
+
 <h4>Leave a review</h4>
-<form class="form-label">
+<form class="form-label" method="post" action="/listings/<%=listing._id%>/reviews">
 <div class="mb-3 mt-3">
     <label for="rating" class="form-label">Rating</label>
     <input type="range" min="1" max="5" id="review[rating]"   >
