--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,9 +1,10 @@
 <% layout("layouts/boilerplate")%>
 <body>
      <h3>All Listings</h3>
- <div class="row row-cols-lg-3 row-cols-md-2  row-cols-sm-1">  <%for(let listing of allListings){%>
+ <div class="row row-cols-lg-3 row-cols-md-2  row-cols-sm-1">
+    <%for(let listing of allListings){%>
   <a href="/listings/<%=listing._id%>" class="listing">
-        <div class="card col" >
+        <div class="card col listing-card" >
 <img src="<%= listing.image.url %>" alt="<%= listing.title %>" class="card-img-top" style="height:20rem;" />
 <div class="card-img-overlay"></div>
   <div class="card-body">
