--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,49 +1,71 @@
 <% layout("layouts/boilerplate")%>
-<body>
-    <div class="row">
-        <div class="col-8 offset-2 mt-3">
-            <h3><%= listing.title%></h3>
-            <div class="card">
-                <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="listing_image">
-                <div class="card-body">
-                    <p class="card-text">
-                        <%= listing.description %><br>
-                        &#8377, <%= listing.price.toLocaleString("en-IN") %><br>
-                        <%= listing.location %><br>
-                        <%= listing.country %><br>
-                    </p>
+
+    <body>
+        <div class="row">
+            <div class="col-8 offset-2 mt-3">
+                <h3>
+                    <%= listing.title%>
+                </h3>
+                <div class="card listing-card">
+                    <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="listing_image">
+                    <div class="card-body">
+                        <p class="card-text">
+                            <%= listing.description %><br>
+                                &#8377, <%= listing.price.toLocaleString("en-IN") %><br>
+                                    <%= listing.location %><br>
+                                        <%= listing.country %><br>
+                        </p>
+                    </div>
                 </div>
-            </div>
-            <div class="btns mt-3">
-                <a class="btn btn-dark" href="/listings/<%= listing._id %>/edit">Edit</a>
-                <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE" class="d-inline">
-                    <button class="btn btn-dark">Delete</button>
-                </form>
+                <div class="btns mt-3">
+                    <a class="btn btn-dark" href="/listings/<%= listing._id %>/edit">Edit</a>
+                    <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE" class="d-inline">
+                        <button class="btn btn-dark">Delete</button>
+                    </form>
+                </div>
             </div>
         </div>
-    </div>
-    
-    <div class="row">
-        <div class="col-8 offset-2 mt-3">
-            <h4>Leave a review</h4>
-            <form method="POST" action="/listings/<%=listing._id%>/reviews" novalidate class="needs-validation">
-                <div class="mb-3 mt-3">
-                    <label for="rating" class="form-label">Rating</label>
-                    <input type="range" min="1" max="5" name="review[rating]" id="rating" class="form-range" required>
-                </div>
-                <div class="mb-3 mt-3">
-                    <label for="comment" class="form-label">Comments</label>
-                    <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
-                <div class="invalid-feedback">Please add your experience</div>
-                </div>
-                <button class="btn btn-outline-dark">Submit</button>
-            </form>
-            <hr>
-            <h4>All reviews</h4>
+
+        <div class="row">
+            <div class="col-8 offset-2 mt-3">
+                <h4>Leave a review</h4>
+                <form method="POST" action="/listings/<%=listing._id%>/reviews" novalidate class="needs-validation">
+                    <div class="mb-3 mt-3">
+                        <label for="rating" class="form-label">Rating</label>
+                        <input type="range" min="1" max="5" name="review[rating]" id="rating" class="form-range"
+                            required>
+                    </div>
+                    <div class="mb-3 mt-3">
+                        <label for="comment" class="form-label">Comments</label>
+                        <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control"
+                            required></textarea>
+                        <div class="invalid-feedback">Please add your experience</div>
+                    </div>
+                    <button class="btn btn-outline-dark">Submit</button>
+                </form>
+                <hr>
+                <h4>All reviews</h4>
+                <!-- <ul>
             <%for(review of listing.reviews){%>
                 <li><%=review.comment%>, <%=review.rating%></li>
           
-            <% } %>
-        </div>
-    </div>
-</body>
+            <% } %></ul>
+             <ul> -->
+                <div class="row">
+                    <%for(review of listing.reviews){%>
+                        <div class="card col-6 mb-3 ms-3">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">
+                                    <%= review.comment %>
+                                </p>
+                                <p class="card-text">
+                                    <%= review.rating %>
+                                </p>
+                            </div>
+                            <% } %>
+                                </ul>
+                        </div>
+                </div>
+            </div>
+    </body>
