--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -43,29 +43,26 @@
                     </div>
                     <button class="btn btn-outline-dark">Submit</button>
                 </form>
-                <hr>
+                <hr/>
                 <h4>All reviews</h4>
-                <!-- <ul>
-            <%for(review of listing.reviews){%>
-                <li><%=review.comment%>, <%=review.rating%></li>
-          
-            <% } %></ul>
-             <ul> -->
+               
+             
                 <div class="row">
+                      
                     <%for(review of listing.reviews){%>
-                        <div class="card col-6 mb-3 ms-3">
+                        <div class="card col-5 ms-3 mb-3">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Rooney</h5>
                                 <p class="card-text">
                                     <%= review.comment %>
                                 </p>
                                 <p class="card-text">
                                     <%= review.rating %>
                                 </p>
-                            </div>
+                            </div> </div>
                             <% } %>
-                                </ul>
-                        </div>
+                          
+               
                 </div>
-            </div>
+            </div> </div>    
     </body>
