review deletion feature implemented

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -59,7 +59,7 @@
                                 <p class="card-text">
                                     <%= review.rating %>
                                 </p>
-                            </div> </div>
+                            </div><form class="mb-3" method="POST" action="/listings/<%= listing._id %>/reviews/<%=review._id%>?_method=DELETE"><button class="btn btn-sm btn-dark">Delete</button></form> </div>
                             <% } %>
                           
                
