--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,7 +24,7 @@ color:#222222;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  align-items: center; /* correct usage */
+  align-items: center; 
   text-align: center;
   background-color: grey;
   padding: 1rem 0;
