--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,5 +1,7 @@
 <% layout("layouts/boilerplate")%>
-<body>
+<%= success %> 
+
+  
      <h3>All Listings</h3>
  <div class="row row-cols-lg-3 row-cols-md-2  row-cols-sm-1">
     <%for(let listing of allListings){%>
@@ -16,5 +18,5 @@
   
  
 
-</body>
+
 
