--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -6,7 +6,7 @@
                 <h3>
                     <%= listing.title%>
                 </h3>
-                <div class="card listing-card">
+                <div class="card listing-card shadow">
                     <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="listing_image">
                     <div class="card-body">
                         <p class="card-text">
@@ -50,7 +50,7 @@
                 <div class="row">
                       
                     <%for(review of listing.reviews){%>
-                        <div class="card col-5 ms-3 mb-3">
+                        <div class="card  col-5 ms-3 mb-3">
                             <div class="card-body">
                                 <h5 class="card-title">Rooney</h5>
                                 <p class="card-text">
