--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -17,10 +17,10 @@
           <a class="nav-link" href="/listings/new">Add new Listings</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      <form class="d-flex" action="/search" method="get">
+  <input class="form-control me-2" type="search" name="country" placeholder="Search by country..." />
+  <button class="btn btn-outline-success" type="submit">Search</button>
+</form>
     </div>
   </div>
 </nav>
