--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -7,7 +7,7 @@
     <%for(let listing of allListings){%>
   <a href="/listings/<%=listing._id%>" class="listing">
         <div class="card col listing-card" >
-<img src="<%= listing.image.url %>" alt="<%= listing.title %>" class="card-img-top shadow" style="height:20rem;" />
+<img src="<%= listing.image.url %>" alt="<%= listing.title %>" class="card-img-top shadow-lg custom-card-border " style="height:20rem;" />
 <div class="card-img-overlay"></div>
   <div class="card-body">
     <p class="card-text"><b><%=listing.title%></b></p>
