--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -6,7 +6,7 @@
                 <h3>
                     <%= listing.title%>
                 </h3>
-                <div class="card listing-card shadow">
+                <div class="card listing-card-show shadow">
                     <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="listing_image">
                     <div class="card-body">
                         <p class="card-text">
