--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -22,5 +22,22 @@
   <button class="btn btn-outline-success" type="submit">Search</button>
 </form>
     </div>
+    <div class="collapse navbar-collapse ms-auto" id="navbarSupportedContent">
+      
+      <% if(!currUser){%>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active"  href="user/signup">SignUp</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="user/login">Login</a>
+        </li>
+        <% } %>
+        <%if(currUser){%>
+        <li class="nav-item">
+          <a class="nav-link" href="user/logout">Logout</a>
+        </li>
+      </ul>
+      <% } %>
   </div>
 </nav>
