--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,7 @@ body{
 .listing-card{
     border:none !important;
     margin-bottom: 2rem;
-  transition: transform .2s;
+ 
 
 }
 .card-img-top{
@@ -81,6 +81,7 @@ body{
     display:flex;
     justify-content: space-between;
 }
+
     .custom-card-border {
         border: 2px solid #fe424d; 
         border-radius: 15px;
@@ -90,7 +91,8 @@ body{
     
    .listing-card:hover{
 
-    transform: scale(1.5);
+    opacity: 0.8;
+    background-color: white;
     
    }
    .listing-card-show{
