--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -35,7 +35,8 @@
         <% } %>
         <%if(currUser){%>
         <li class="nav-item">
-          <a class="nav-link" href="user/logout">Logout</a>
+          <a class="nav-link" href="/user/logout">Logout</a>
+          
         </li>
       </ul>
       <% } %>
