--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,68 +1,92 @@
 <% layout("layouts/boilerplate")%>
+    <%= success %>
 
-    <body>
-        <div class="row">
-            <div class="col-8 offset-2 mt-3">
-                <h3>
-                    <%= listing.title%>
-                </h3>
-                <div class="card listing-card-show shadow">
-                    <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="listing_image">
-                    <div class="card-body">
-                        <p class="card-text">
-                            <%= listing.description %><br>
-                                &#8377, <%= listing.price.toLocaleString("en-IN") %><br>
-                                    <%= listing.location %><br>
-                                        <%= listing.country %><br>
-                        </p>
+        <body>
+            <div class="row">
+                <div class="col-8 offset-2 mt-3">
+                    <h3>
+                        <%= listing.title%>
+                    </h3>
+                    <div class="card listing-card-show shadow">
+                        <img src="<%=listing.image.url%>" class="card-img-top show-img" alt="listing_image">
+                        <br>
+                        <div class="card-body">
+                            <p class="card-text">
+                                <i>listed by:
+                                    <%=listing.owner.username%>
+                                </i>
+                            </p>
+
+                            <br>
+                            <p class="card-text"></p>
+                            <%= listing.description %>
+                                </p>
+                                <p class="card-text">&#8377, <%= listing.price.toLocaleString("en-IN") %>
+                                </p>
+                                <p class="card-text">
+                                    <%= listing.location %>
+                                </p>
+                                <p class="card-text">
+                                    <%= listing.country %>
+                                </p>
+                                </p>
+                        </div>
                     </div>
-                </div>
-                <div class="btns mt-3">
-                    <a class="btn btn-dark" href="/listings/<%= listing._id %>/edit">Edit</a>
-                    <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE" class="d-inline">
-                        <button class="btn btn-dark">Delete</button>
-                    </form>
+                    <div>
+                        <% if(currUser && currUser._id.equals(listing.owner._id)) {%>
+                            <div class="btns mt-3">
+                                <a class="btn btn-dark" href="/listings/<%= listing._id %>/edit">Edit</a>
+                                <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE" class="d-inline">
+                                    <button class="btn btn-dark">Delete</button>
+                                </form>
+                            </div> <% } %>
+                    </div>
+
+                   
                 </div>
             </div>
-        </div>
+            <div class="row">
+                <div class="col-8 offset-2 mt-3">
+                    <h4>Leave a review</h4>
+                    <form method="POST" action="/listings/<%=listing._id%>/reviews" novalidate class="needs-validation">
+                        <div class="mb-3 mt-3">
+                            <label for="rating" class="form-label">Rating</label>
+                            <input type="range" min="1" max="5" name="review[rating]" id="rating" class="form-range"
+                                required>
+                        </div>
+                        <div class="mb-3 mt-3">
+                            <label for="comment" class="form-label">Comments</label>
+                            <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control"
+                                required></textarea>
+                            <div class="invalid-feedback">Please add your experience</div>
+                        </div>
+                        <button class="btn btn-outline-dark">Submit</button>
+                    </form>
+                    <hr />
+                    <h4>All reviews</h4>
 
-        <div class="row">
-            <div class="col-8 offset-2 mt-3">
-                <h4>Leave a review</h4>
-                <form method="POST" action="/listings/<%=listing._id%>/reviews" novalidate class="needs-validation">
-                    <div class="mb-3 mt-3">
-                        <label for="rating" class="form-label">Rating</label>
-                        <input type="range" min="1" max="5" name="review[rating]" id="rating" class="form-range"
-                            required>
-                    </div>
-                    <div class="mb-3 mt-3">
-                        <label for="comment" class="form-label">Comments</label>
-                        <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control"
-                            required></textarea>
-                        <div class="invalid-feedback">Please add your experience</div>
-                    </div>
-                    <button class="btn btn-outline-dark">Submit</button>
-                </form>
-                <hr/>
-                <h4>All reviews</h4>
-               
-             
-                <div class="row">
-                      
-                    <%for(review of listing.reviews){%>
-                        <div class="card  col-5 ms-3 mb-3">
-                            <div class="card-body">
-                                <h5 class="card-title">Rooney</h5>
-                                <p class="card-text">
-                                    <%= review.comment %>
-                                </p>
-                                <p class="card-text">
-                                    <%= review.rating %>
-                                </p>
-                            </div><form class="mb-3" method="POST" action="/listings/<%= listing._id %>/reviews/<%=review._id%>?_method=DELETE"><button class="btn btn-sm btn-dark">Delete</button></form> </div>
+
+                    <div class="row">
+
+                        <%for(review of listing.reviews){%>
+                            <div class="card  col-5 ms-3 mb-3">
+                                <div class="card-body">
+                                    <h5 class="card-title">Rooney</h5>
+                                    <p class="card-text">
+                                        <%= review.comment %>
+                                    </p>
+                                    <p class="card-text">
+                                        <%= review.rating %>
+                                    </p>
+                                </div>
+                                <form class="mb-3" method="POST"
+                                    action="/listings/<%= listing._id %>/reviews/<%=review._id%>?_method=DELETE"><button
+                                        class="btn btn-sm btn-dark">Delete</button></form>
+                            </div>
                             <% } %>
-                          
-               
+
+
+                    </div>
                 </div>
-            </div> </div>    
-    </body>
+            </div>
+        </body>
