authorisation implemented for edit and delete features

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,5 +1,5 @@
 <% layout("layouts/boilerplate")%>
-    <%= success %>
+    
 
         <body>
             <div class="row">
@@ -33,13 +33,13 @@
                         </div>
                     </div>
                     <div>
-                        <% if(currUser && currUser._id.equals(listing.owner._id)) {%>
                             <div class="btns mt-3">
                                 <a class="btn btn-dark" href="/listings/<%= listing._id %>/edit">Edit</a>
                                 <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE" class="d-inline">
                                     <button class="btn btn-dark">Delete</button>
                                 </form>
-                            </div> <% } %>
+                                </div>
+                            
                     </div>
 
                    
