--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -6,16 +6,12 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active"  href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/listings">All listings</a>
-        </li>
         
         <li class="nav-item">
-          <a class="nav-link" href="/listings/new">Add new Listings</a>
+          <a class="nav-link" href="/listings">Explore</a>
         </li>
+        
+        
       </ul>
       <form class="d-flex" action="/search" method="get">
   <input class="form-control me-2" type="search" name="country" placeholder="Search by country..." />
@@ -23,7 +19,9 @@
 </form>
     </div>
     <div class="collapse navbar-collapse ms-auto" id="navbarSupportedContent">
-      
+     
+          <a class="nav-link" href="/listings/new">Add new Listing</a>
+  
       <% if(!currUser){%>
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
