--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,9 +1,63 @@
 <% layout("layouts/boilerplate")%>
-
-
-  
-     <h3>All Listings</h3>
- <div class="row row-cols-lg-3 row-cols-md-2  row-cols-sm-1">
+<style>
+  #filters{
+    
+    display:flex;
+flex-wrap: wrap;
+  }
+  .filter{text-align: center;
+  margin-right: 2rem;
+  margin-top:2rem;
+  opacity: 0.7;}
+.taxinfo{
+  display: none;
+}
+</style>
+<div id="filters">
+  <a href="/listings?category=Trending">
+    <div class="filter">
+      <div><i class="fa-solid fa-fire"></i></div>
+      <p>Trending</p>
+    </div>
+  </a>
+  <a href="/listings?category=Rooms">
+    <div class="filter">
+      <div><i class="fa-solid fa-bed"></i></div>
+      <p>Rooms</p>
+    </div>
+  </a>
+  <a href="/listings?category=Iconic Cities">
+    <div class="filter">
+      <div><i class="fa-solid fa-mountain-city"></i></div>
+      <p>Iconic Cities</p>
+    </div>
+  </a>
+  <a href="/listings?category=Nature">
+    <div class="filter">
+      <div><i class="fa-solid fa-tree"></i></div>
+      <p>Nature</p>
+    </div>
+  </a>
+  <a href="/listings?category=Resorts">
+    <div class="filter">
+      <div><i class="fa-solid fa-hotel"></i></div>
+      <p>Resorts</p>
+    </div>
+  </a>
+  <a href="/listings?category=Rivers">
+    <div class="filter">
+      <div><i class="fa-solid fa-water"></i></div>
+      <p>Rivers</p>
+    </div>
+  </a>
+</div>
+<div class="tax-toggle">
+  <div class="form-check form-switch form-check-reverse">
+  <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault">
+  <label class="form-check-label" for="switchCheckDefault">Display total after taxes</label>
+</div>
+</div>
+<div class="row row-cols-lg-3 row-cols-md-2  row-cols-sm-1 mt-3">
     <%for(let listing of allListings){%>
   <a href="/listings/<%=listing._id%>" class="listing">
         <div class="card col listing-card" >
@@ -11,10 +65,24 @@
 <div class="card-img-overlay"></div>
   <div class="card-body">
     <p class="card-text"><b><%=listing.title%></b></p>
-       <p class="card-text">&#8377;<%= listing.price.toLocaleString("en-IN") %></p>
-  </div>
+       <p class="card-text">&#8377;<%= listing.price.toLocaleString("en-IN") %>  /day  <i class="taxinfo">+18%GST</i></p>
+   
+      </div>
 </div>
 </a><%}%></div>
+<script>
+  let taxSwitch=document.getElementById("switchCheckDefault");
+  taxSwitch.addEventListener("click",()=>{
+    let taxinfo=document.getElementsByClassName("taxinfo");
+    for (let info of taxinfo) {
+      if (info.style.display != "inline") {
+        info.style.display = "inline";
+      } else {
+        info.style.display = "none";
+      }
+    }
+  });
+</script>
   
  
 
