--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,45 +1,61 @@
 <% layout("layouts/boilerplate")%>
-
-   <body>
-      <h1>Create new listing</h1> <br> <br> <br>
-      <form action="/listings " method="POST" novalidate class="needs-validation">
-         <div class="mb-3">
+<body>
+    <h1>Create new listing</h1> <br> <br> <br>
+    <form action="/listings" method="POST" novalidate class="needs-validation" enctype="multipart/form-data">
+        <div class="mb-3">
             <label class="form-label" for="title">title</label>
-
             <input type="text" class="form-control" placeholder="Enter title" id="title" name="listing[title]" required>
             <div class="valid-feedback"> Title looks good!</div>
+        </div>
 
-            <div class="mb-3">
-               <label for="description" class="form-label">description</label>
-               <textarea name="listing[description]" id="descrtiption" class="form-control"
-                  placeholder="Enter descrtiption" required></textarea>
-               <div class="valid-feedback">description looks good!</div>
-            </div>
+        <div class="mb-3">
+            <label for="description" class="form-label">description</label>
+            <textarea name="listing[description]" id="description" class="form-control"
+                placeholder="Enter description" required></textarea>
+            <div class="valid-feedback">description looks good!</div>
+        </div>
 
-            <div class="mb-3">
-               <label for="price" class="form-label">Price:</label>
-               <input type="text" placeholder="Enter price details" class="form-control" id="price"
-                  name="listing[price]" required>
-               <div class="invalid-feedback"> please enter a valid price</div>
-            </div>
+        <div class="mb-3 ">
+            <label for="price" class="form-label">Price:</label>
+            <input type="text" placeholder="Enter price details" class="form-control" id="price"
+                name="listing[price]" required>
+            <div class="invalid-feedback"> please enter a valid price</div>
+        </div>
 
-            <div class="mb-3"> <label for="image" class="form-label">Image</label>
-               <input type="text" placeholder="Enter URL" class="form-control" id="image" name="listing[image]"><br><br>
-               <div class="valid-feedback">Image looks good!</div>
-            </div>
+        <div class="mb-3 mt-5"> 
+            <label for="image" class="form-label">Upload Listing Image</label>
+            <input type="file" class="form-control" id="image" name="listing[image]" required>
+            <div class="valid-feedback">Image looks good!</div>
+        </div>
 
-            <div class="mb-3"><label for="location" class="form-label">location</label>
-               <input type="text" placeholder="Enter location" id="location" class="form-control"
-                  name="listing[location]" required>
-               <div class="valid-feedback"> location perfect!</div>
-            </div>
+        <div class="mb-3">
+            <label for="location" class="form-label">location</label>
+            <input type="text" placeholder="Enter location" id="location" class="form-control"
+                name="listing[location]" required>
+            <div class="valid-feedback"> location perfect!</div>
+        </div>
 
-            <div class="mb-3"><label for="country" class="form-label">country</label>
-               <input type="text" placeholder="Enter country" id="country" class="form-control" name="listing[country]"
-                  required>
-               <div class="valid-feedback"> Awesome!</div>
-            </div>
+        <div class="mb-3">
+            <label for="country" class="form-label">country</label>
+            <input type="text" placeholder="Enter country" id="country" class="form-control" name="listing[country]"
+                required>
+            <div class="valid-feedback"> Awesome!</div>
+        </div>
 
-            <button class="btn btn-dark" type="submit">SUBMIT</button>
-      </form>
-   </body>
+        <div class="mb-3">
+            <label for="category" class="form-label">Category</label>
+            <select name="listing[category]" id="category" class="form-select" required>
+                <option value="" disabled selected>Select a category</option>
+                <option value="Trending">Trending</option>
+                <option value="Rooms">Rooms</option>
+                <option value="Iconic Cities">Iconic Cities</option>
+                <option value="Nature">Nature</option>
+                <option value="Resorts">Resorts</option>
+                <option value="Rivers">Rivers</option>
+                </select>
+            <div class="invalid-feedback">Please select a valid category</div>
+        </div>
+
+        <button class="btn btn-dark mt-3" type="submit">SUBMIT</button>
+    </form>
+</body>
